# highlighter-rs

./: Cargo.toml  README.md  hl.sublime-project  hl.sublime-workspace  run  run-with-debug.sh  test.sh
samples/: highlighter-logcat  highlighter-logcat.toml
src/: filter.rs  lib.rs  main.rs  rule.rs  rule_parser.rs  rule_parser.rs.bk  term_color.rs
