[package]
name = "highlighter"
version = "0.1.0"
authors = ["Makoto Onuki <makoto.onuki@gmail.com>"]

[lib]
name = "highlighter"
path = "src/lib.rs"

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
regex = "0.1"
pcre = { git = "https://github.com/omakoto/rust-pcre" }
bitflags = "0.7"
toml = "0.2"
lazy_static = "0.1"
fileinput = "0.3"
clap = "2"

log = "*"
env_logger = "*"
